# kairos

./: .gitignore  README.md  pyproject.toml
scripts/: fetch_option_chain_ibkr.py  fetch_qqq_prices.py  fetch_qqq_prices_ibkr.py  fetch_stock_prices_ibkr.py  generate_synthetic_qqq_option_chain.py  run_pipeline.py
src/kairos/: __init__.py  cli.py  pipeline.py
src/kairos/data/: __init__.py  ibkr.py  options_chain.py  prices.py  schemas.py  synthetic.py  twelve_data.py
src/kairos/options/: __init__.py  black_scholes.py  greeks.py  implied_vol.py  surface.py
src/kairos/prices/: __init__.py  implied_realized.py  realized_vol.py
tests/: test_black_scholes.py  test_ibkr_option_chain.py  test_ibkr_prices.py  test_implied_realized.py  test_options_chain.py  test_realized_vol.py  test_surface.py
