[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kairos"
version = "0.1.0"
description = "QQQ listed-option volatility study pipeline and analytics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "pydantic>=2.6",
    "pytest>=8.0",
    "scipy>=1.12",
]

[project.scripts]
kairos-run = "kairos.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
